fix: styling for blog on mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -11,14 +11,15 @@ html,
 body {
   font-size: 20px;
 
-  padding: 1rem;
-  max-width: 1100px;
-
-  margin: 0 auto;
-  box-sizing: border-box;
-
   background: var(--var-primary-color-theme);
   color: var(--var-primary-text-color-theme);
+}
+
+body {
+  padding: 2rem;
+  max-width: 1100px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 #intro {
